--- a/_config.yml
+++ b/_config.yml
@@ -165,6 +165,8 @@ kramdown:
     block:
       line_numbers: true
       start_line: 1
+  parse_block_html: true
+  input: GFM
 
 collections:
   tabs:
